# nortools

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  .npmrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  RFC.md  aar_import_stub.bzl  architecture.md  developer-setup.md  development.md  inspiration.md  krema.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cli_native/: BUILD.bazel  run_native_cli.sh  smoke_tests.bzl  test_native_linux_cli_single_tool_smoke.sh  testlib.sh
cli_native/samples/: dmarc_report.xml  domains.txt  emails.txt  headers.txt
cli_native/smoke/: README.md  test_names.bzl
cli_native/smoke/args/: native_linux_cli_smoke_a.args  native_linux_cli_smoke_aaaa.args  native_linux_cli_smoke_arin.args  native_linux_cli_smoke_asn.args  native_linux_cli_smoke_bimi.args  native_linux_cli_smoke_blacklist.args  native_linux_cli_smoke_blocklist.args  native_linux_cli_smoke_bulk.args  native_linux_cli_smoke_cert.args  native_linux_cli_smoke_cname.args  native_linux_cli_smoke_compliance.args  native_linux_cli_smoke_deliverability.args  native_linux_cli_smoke_dkim.args  native_linux_cli_smoke_dmarc.args  native_linux_cli_smoke_dmarc_generator.args  native_linux_cli_smoke_dmarc_report.args  native_linux_cli_smoke_dns_health.args  native_linux_cli_smoke_dns_propagation.args  native_linux_cli_smoke_dnskey.args  native_linux_cli_smoke_domain_health.args  native_linux_cli_smoke_ds.args  native_linux_cli_smoke_email_extract.args  native_linux_cli_smoke_header_analyzer.args  native_linux_cli_smoke_http.args  native_linux_cli_smoke_https.args  native_linux_cli_smoke_ipseckey.args  native_linux_cli_smoke_loc.args  native_linux_cli_smoke_mailflow.args  native_linux_cli_smoke_mta_sts.args  native_linux_cli_smoke_mx.args  native_linux_cli_smoke_ns.args  native_linux_cli_smoke_nsec.args  native_linux_cli_smoke_nsec3param.args  native_linux_cli_smoke_password_gen.args  native_linux_cli_smoke_ping.args  native_linux_cli_smoke_ptr.args  native_linux_cli_smoke_rrsig.args  native_linux_cli_smoke_smtp.args  native_linux_cli_smoke_soa.args  native_linux_cli_smoke_spf.args  (+9 more)
cli_native/smoke/assertions/: native_linux_cli_smoke_aaaa.jq  native_linux_cli_smoke_asn.jq  native_linux_cli_smoke_bimi.expected  native_linux_cli_smoke_dmarc.jq  native_linux_cli_smoke_dmarc_generator.jq  native_linux_cli_smoke_email_extract.jq  native_linux_cli_smoke_header_analyzer.jq  native_linux_cli_smoke_http.jq  native_linux_cli_smoke_ipseckey.expected  native_linux_cli_smoke_nsec3param.expected  native_linux_cli_smoke_password_gen.jq  native_linux_cli_smoke_soa.jq  native_linux_cli_smoke_whatismyip.jq
desktop/: BUILD.bazel  build_native_windows.ps1  run_native_linux_x64.sh  run_native_macos_arm64.sh  run_native_windows_x64.ps1  run_native_windows_x64.sh  run_native_windows_x64_gui.ps1  test_native_linux_smoke.sh  windows_gui_launcher.cc  windows_installer_updater.cc  windows_msi_updater.cc  windows_titlebar_icon_helper.cc
desktop/graal/: reachability-metadata.json  reflect-config.json  resource-config.json
docs-site/: .gitignore  BUILD.bazel  hugo.toml  package.json
docs-site/content/: _index.md
docs-site/content/concepts/: dns-records.md  email-authentication.md  local-discovery.md  tls-certificates.md
docs-site/content/getting-started/: command-line.md  desktop-ui.md  install.md  json-output.md
docs-site/content/reference/: changelog.md
docs-site/content/troubleshooting/: desktop.md  dns.md  email.md  tls.md
docs-site/data/: command-descriptions.json
docs-site/data/command-output/: a.json  aaaa.json  arin.json  asn.json  bimi.json  blacklist.json  blocklist.json  bulk.json  cert.json  cname.json  compliance.json  deliverability.json  dkim.json  dmarc-generator.json  dmarc-report.json  dmarc.json  dns-health.json  dns-propagation.json  dnskey.json  domain-health.json  ds.json  email-extract.json  header-analyzer.json  http.json  https.json  ipseckey.json  loc.json  mailflow.json  mta-sts.json  mx.json  ns.json  nsec.json  nsec3param.json  password-gen.json  ping.json  ptr.json  rrsig.json  smtp.json  soa.json  spf-generator.json  (+9 more)
docs-site/layouts/: index.html
docs-site/layouts/_default/: baseof.html  list.html  single.html
docs-site/layouts/partials/: page-title.html  section-nav.html
docs-site/scripts/: bazel-docs.ps1  bazel-docs.sh  capture-command-output.mjs  capture_command_output.sh  check-docs.mjs  dev.sh  generate-tool-reference.mjs
docs-site/static/css/: site.css
docs-site/static/js/: site.js
frontend/: BUILD.bazel  index.html  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  BUILD.bazel
frontend/src/api/: client.ts
frontend/src/components/: CliCopy.vue  Sidebar.vue
frontend/src/navigation/: toolGroups.ts
frontend/src/router/: index.ts
frontend/src/utils/: cli.ts
frontend/src/views/: AboutView.vue  BlacklistCheck.vue  DkimLookup.vue  DmarcGenerator.vue  DmarcLookup.vue  DnsHealth.vue  DnsLookup.vue  DnssecLookup.vue  DomainHealth.vue  EmailExtract.vue  HomeView.vue  HttpCheck.vue  HttpsCheck.vue  PasswordGen.vue  PingCheck.vue  ReverseDns.vue  SpfGenerator.vue  SpfLookup.vue  SubnetCalc.vue  TcpCheck.vue  Traceroute.vue  WhatIsMyIp.vue  WhoisLookup.vue
lib/cli/: BUILD.bazel
lib/dns/: BUILD.bazel
lib/output/: BUILD.bazel
lib/zeroconf/: BUILD.bazel
tools/blocklist/blocklist/: BUILD.bazel
tools/blocklist/ipseckey/: BUILD.bazel
tools/composite/compliance/: BUILD.bazel
tools/composite/mailflow/: BUILD.bazel
tools/dns/cname/: BUILD.bazel
tools/dns/txt/: BUILD.bazel
tools/dnssec/ds/: BUILD.bazel
tools/dnssec/nsec3param/: BUILD.bazel
tools/email/dmarc/: BUILD.bazel
tools/email/dmarc-generator/: BUILD.bazel
tools/email/header-analyzer/: BUILD.bazel
tools/email/spf/: BUILD.bazel
tools/network/http/: BUILD.bazel
tools/network/https/: BUILD.bazel
tools/network/iperf/: BUILD.bazel  build_latest_iperf3.ps1  build_latest_iperf3.sh
tools/network/ping/: BUILD.bazel
tools/network/tcp/: BUILD.bazel
tools/network/trace/: BUILD.bazel
web/: BUILD.bazel  git_build_info.bzl
(+271 files in other folders)
