# Root BUILD file for nortools

load("@npm//:defs.bzl", "npm_link_all_packages")
load("//:tools/bazel/krema_toml.bzl", "krema_toml_info")

npm_link_all_packages(name = "node_modules")

exports_files([
    "inspiration.md",
    "RFC.md",
])

krema_toml_info(
    name = "krema_toml_generated",
    template = "//:krema.toml",
)
