# Root BUILD file for nortools

load("@npm//:defs.bzl", "npm_link_all_packages")
load("//:tools/bazel/krema_toml.bzl", "krema_toml_info")
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "2.2",
    language_version = "2.2",
)

npm_link_all_packages(name = "node_modules")

exports_files([
    "inspiration.md",
    "RFC.md",
    "docs/assets/nortools-icon.png",
])

krema_toml_info(
    name = "krema_toml_generated",
    template = "//:krema.toml",
)
