module(
    name = "nortools",
    version = "0.1.0",
)

# Java rules (override bundled version for JDK 25 support + java_tools v19.0)
bazel_dep(name = "rules_java", version = "9.5.0")

# Kotlin rules
bazel_dep(name = "rules_kotlin", version = "2.1.10")

# JVM external (Maven) dependencies
bazel_dep(name = "rules_jvm_external", version = "6.10")

# JavaScript/Node.js rules
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.2")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.11")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # DNS library
        "dnsjava:dnsjava:3.6.4",
        # Required by dnsjava Windows resolver discovery (ResolverConfig provider)
        "net.java.dev.jna:jna:5.17.0",
        "net.java.dev.jna:jna-platform:5.17.0",
        # CLI framework
        "com.github.ajalt.clikt:clikt-jvm:5.0.3",
        # JSON serialization (Jackson)
        "com.fasterxml.jackson.core:jackson-databind:2.17.2",
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.17.2",
        # Web framework
        "io.javalin:javalin:6.7.0",
        "org.webjars.npm:vue:3.5.13",
        # SLF4J (required by Javalin)
        "org.slf4j:slf4j-simple:2.0.16",
        # Desktop framework (Krema - system webview desktop apps)
        "build.krema:krema-core:0.3.0",
        # Testing
        "org.junit.jupiter:junit-jupiter-api:5.11.4",
        "org.junit.jupiter:junit-jupiter-engine:5.11.4",
        "org.junit.jupiter:junit-jupiter-params:5.11.4",
        "org.junit.platform:junit-platform-console-standalone:1.11.4",
        "com.tngtech.archunit:archunit-junit5:1.3.0",
    ],
    # Avoid pulling Android rules on Windows; no AAR deps are used here.
    aar_import_bzl_label = "@@//:aar_import_stub.bzl",
    # Suppress warning about rules_kotlin contributing to this maven repo
    known_contributing_modules = ["bazel_worker_java"],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# Node.js toolchain
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.22.0")

# pnpm toolchain
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(name = "pnpm")
use_repo(pnpm, "pnpm")

# npm dependencies from pnpm-lock.yaml
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    # Work around Windows CI lifecycle hook ENOENT in esbuild postinstall.
    lifecycle_hooks_exclude = ["esbuild"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
