# Linux-only shell wrappers; no Windows equivalents yet.
package(default_visibility = ["//visibility:public"])
load(":smoke_tests.bzl", "define_native_linux_cli_smoke_tests")

sh_binary(
    name = "native_cli_a",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "a", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_aaaa",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "aaaa", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_arin",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "arin", "--json", "8.8.8.8"],
)

sh_binary(
    name = "native_cli_asn",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "asn", "--json", "AS13335"],
)

sh_binary(
    name = "native_cli_bimi",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "bimi", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_blacklist",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "blacklist", "--json", "8.8.8.8"],
)

sh_binary(
    name = "native_cli_blocklist",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "blocklist", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_bulk",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64", "samples/domains.txt"],
    args = ["$(location //desktop:native-linux-x64)", "bulk", "--json", "$(rootpath samples/domains.txt)", "--type", "A"],
)

sh_binary(
    name = "native_cli_cert",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "cert", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_cname",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "cname", "--json", "www.google.com"],
)

sh_binary(
    name = "native_cli_compliance",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "compliance", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_dkim_discover",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dkim", "--json", "--discover", "nrk.no"],
)

sh_binary(
    name = "native_cli_dkim_selector",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dkim", "--json", "20230601", "google.com"],
)

sh_binary(
    name = "native_cli_dmarc",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dmarc", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_dmarc_generator",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dmarc-generator", "--json", "example.com", "--policy", "none"],
)

sh_binary(
    name = "native_cli_dmarc_report",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64", "samples/dmarc_report.xml"],
    args = ["$(location //desktop:native-linux-x64)", "dmarc-report", "--json", "$(rootpath samples/dmarc_report.xml)"],
)

sh_binary(
    name = "native_cli_dns_health",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dns-health", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_dns_propagation",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dns-propagation", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_dnskey",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "dnskey", "--json", "cloudflare.com"],
)

sh_binary(
    name = "native_cli_domain_health",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "domain-health", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_ds",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "ds", "--json", "cloudflare.com"],
)

sh_binary(
    name = "native_cli_email_extract",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64", "samples/emails.txt"],
    args = ["$(location //desktop:native-linux-x64)", "email-extract", "--json", "$(rootpath samples/emails.txt)"],
)

sh_binary(
    name = "native_cli_deliverability",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "deliverability", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_header_analyzer",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64", "samples/headers.txt"],
    args = ["$(location //desktop:native-linux-x64)", "header-analyzer", "--json", "$(rootpath samples/headers.txt)"],
)

sh_binary(
    name = "native_cli_http",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "http", "--json", "http://example.com"],
)

sh_binary(
    name = "native_cli_https",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "https", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_ipseckey",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "ipseckey", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_loc",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "loc", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_mailflow",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "mailflow", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_mta_sts",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "mta-sts", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_mx",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "mx", "--json", "gmail.com"],
)

sh_binary(
    name = "native_cli_nsec",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "nsec", "--json", "cloudflare.com"],
)

sh_binary(
    name = "native_cli_nsec3param",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "nsec3param", "--json", "cloudflare.com"],
)

sh_binary(
    name = "native_cli_ns",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "ns", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_password_gen",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "password-gen", "--json", "--length", "12", "--count", "2"],
)

sh_binary(
    name = "native_cli_ping",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "ping", "--json", "--count", "2", "example.com"],
)

sh_binary(
    name = "native_cli_ptr",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "ptr", "--json", "8.8.8.8"],
)

sh_binary(
    name = "native_cli_rrsig",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "rrsig", "--json", "cloudflare.com"],
)

sh_binary(
    name = "native_cli_smtp",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "smtp", "--json", "gmail.com"],
)

sh_binary(
    name = "native_cli_soa",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "soa", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_spf",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "spf", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_spf_generator",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = [
        "$(location //desktop:native-linux-x64)",
        "spf-generator",
        "--json",
        "--include", "_spf.google.com",
        "--ip4", "203.0.113.0/24",
        "--all", "softfail",
    ],
)

sh_binary(
    name = "native_cli_srv",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "srv", "--json", "_sip._tcp.google.com"],
)

sh_binary(
    name = "native_cli_subnet_calc",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "subnet-calc", "--json", "192.168.1.0/24"],
)

sh_binary(
    name = "native_cli_tcp",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "tcp", "--json", "example.com", "443"],
)

sh_binary(
    name = "native_cli_tlsrpt",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "tlsrpt", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_trace",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "trace", "--json", "example.com"],
)

sh_binary(
    name = "native_cli_txt",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "txt", "--json", "google.com"],
)

sh_binary(
    name = "native_cli_whatismyip",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "whatismyip", "--json"],
)

sh_binary(
    name = "native_cli_whois",
    srcs = ["run_native_cli.sh"],
    target_compatible_with = ["@platforms//os:linux"],
    data = ["//desktop:native-linux-x64"],
    args = ["$(location //desktop:native-linux-x64)", "whois", "--json", "example.com"],
)

define_native_linux_cli_smoke_tests()
